--- a/css/reloj.css
+++ b/css/reloj.css
@@ -16,6 +16,7 @@ body{
 	text-align: center;
 	font-size: 90px;
 	color: #ffffff;
+	text-shadow: 2px 2px 2px rgba(50,50,50,.5);
 }
 .ciudad {
 	width: 250px;
